test/good/generics/any01.px

func f<Any T>(T x) Int def
    return 42

print f(5)
print f('S')
