test/bad/generics/void02.px

func f<T>() T? def
    return

f()
